# STAT-486-Final-Project

./: .gitattributes  README.md  demo.ipynb  pyproject.toml  style.css
data/: README.md  lung_cancer_data.csv
progress/: 01_proposal.md  02_eda.md  03_supervised.md  04_unsupervised.md
src/: 01_eda.ipynb  02_clean.ipynb  03_analysis.ipynb  eda.ipynb
