[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hdbscan>=0.8.42",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "prince>=0.17.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "snfpy>=0.2.2",
    "statsmodels>=0.14.6",
    "umap-learn>=0.5.12",
]
